src/test/resources/typeSystemTestModels/invalid/expressions/PrimaryAccess.java
/* (c) https://github.com/MontiCore/monticore */

package typeSystemTestModels.invalid.expressions;

public class PrimaryAccess {

  int a = b;

}
